--- a/src/App.css
+++ b/src/App.css
@@ -31,3 +31,13 @@ body{
 .pages-navbar p:hover{
   background-color:#3a3b3b;
 }
+.footer-sidebar p {
+  cursor: pointer;
+  transition: background-color 0.4s;
+  border-radius: 10px;
+  padding: 0px 5px;
+  margin: 10px 0px;
+}
+.footer-sidebar p:hover{
+  background-color:rgb(20, 20, 20);
+}
