--- a/src/App.css
+++ b/src/App.css
@@ -81,13 +81,14 @@ a {
 
 }
 .search-btn {
-  margin-left: 40px;
   background-color: #6b2643;
   border: 1px solid #6b2643 ;
   font-family: 'Poppins';
   font-size: 18px;
   border-radius: 10px;
   cursor: pointer;
+  height: 60px;
+  width: 90px;
 
 }
 .card-style:hover {
