--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,80 @@ a {
 .game-details-section > div {
   width: 48%;
 }
+.sidebar-container-style{
+  background-color: #0f141b;
+  border-right: 1px solid #333;
+  width: 200px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.footer-sidebar{
+  padding-top: 10px;
+  border-top: 1px solid #333;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.app-container-main-style{
+  width: 60%;
+  margin: 30px auto;
+}
+.games-finished-container{
+  width: 50%;
+}
+.first-gamer-status-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.game-finished-this-year-container{
+  display: flex;
+  gap: 15px;
+  flex-wrap: wrap;
+  width: 80%;
+}
+.game-dashboard-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 5px;
+}
+@media (max-width: 700px){
+  .main-div-container-style{
+    flex-direction: column-reverse;
+
+  }
+  .sidebar-container-style{
+    width: 100%;
+    align-items: center;
+  }
+  .footer-sidebar{
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+  .menu-elements {
+    display: flex;
+    align-items: flex-start;
+    flex-wrap: wrap;
+  }
+  .app-container-main-style{
+  width: 100%;
+  margin: 30px auto;  
+  }
+  .games-finished-container{
+  width: 100%;
+  }
+  .first-gamer-status-container{
+    flex-direction: column;
+  }
+  .game-finished-this-year-container{
+    width: 100%;
+    gap: 0px;
+  }
+  .game-dashboard-container{
+    justify-content: center;
+  }
+}
